Add header menu

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,11 @@
-// fonts
+// Fonts
 $font-main: "Roboto", sans-serif;
+$font-titles: "Roboto Slab", serif;
 
 // colors
-$color-white: #f3f4f5;
-$color-secondary: #999;
+$primary-color: #f26002;
+$secondary-color: #8ccbea;
+$light-color: #ffffff;
+$light-blue: #eff9ff;
+$blue: #0271bc;
+$dark-blue: #304268;
