--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,12 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header class="header">
+  <div class="header-menu">
+    <a href="https://adalab.es/" title="Ir a Adalab"
+      ><img
+        clas="menu-icon"
+        src="./assets/images/ico-menu.svg"
+        alt="Menu icon"
+      />
+    </a>
+  </div>
+  >
 </header>
