--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,18 @@
-.page__header {
+// .page__header {
+//   display: flex;
+//   justify-content: space-evenly;
+//   margin-bottom: 3rem;
+// }
+
+.header-menu {
+  width: 44px;
+  height: 44px;
+  background-color: $blue;
+  position: fixed;
   display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
+  justify-content: center;
+  align-items: center;
+  .menu-icon {
+    width: 100%;
+  }
 }
