Create header structure

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,12 +1,28 @@
 <header class="header">
-  <div class="header-menu">
-    <a href="https://adalab.es/" title="Ir a Adalab"
-      ><img
-        clas="menu-icon"
-        src="./assets/images/ico-menu.svg"
-        alt="Menu icon"
-      />
-    </a>
+  <div class="wrapper">
+    <div class="header-menu">
+      <a href="https://adalab.es/" title="Ir a Adalab">
+        <img
+          class="menu-icon"
+          src="./assets/images/ico-menu.svg"
+          alt="Menu icon"
+        />
+      </a>
+    </div>
+    <div class="hero">
+      <div class="hero-title">
+        <h1>
+          <span>Anonymous</span>
+          <span>Proxy</span>
+        </h1>
+        <p>In hac habitasse platea dictumst.</p>
+      </div>
+      <div class="scroll-down">
+        <img
+          src="./assets/images/ico-scroll-down.svg"
+          alt="Icono para deslizar"
+        />
+      </div>
+    </div>
   </div>
-  >
 </header>
