--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,9 +1,8 @@
-// .page__header {
-//   display: flex;
-//   justify-content: space-evenly;
-//   margin-bottom: 3rem;
-// }
-
+.wrapper {
+  width: 100%;
+  margin: auto;
+  max-width: 1200px;
+}
 .header-menu {
   width: 44px;
   height: 44px;
@@ -12,7 +11,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  top: 0;
   .menu-icon {
     width: 100%;
   }
+}
+
+.hero {
+  height: 100vh;
+  background-image: url("../images/cover.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 0;
+}
+
+.hero-title {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
 }
