--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,5 @@
-// body {
-//   padding: 2rem;
-//   height: 100vh;
-//   background: url("../images/logo-adalab.png") center center no-repeat
-//     $color-white;
-//   font-family: $font-main;
-// }
+html {
+  font-size: 16px;
+  font-family: $font-main;
+  color: black;
+}
