--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -23,12 +23,36 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding-bottom: 53px;
+}
+.hero-title {
+  display: block;
+  text-align: center;
+  color: $light-color;
+  padding-bottom: 45px;
+  h1 {
+    font-size: 2.625rem;
+    font-family: $font-titles;
+    text-transform: uppercase;
+    line-height: 55px;
+  }
 }
 
-.hero-title {
-  flex-direction: column;
+.scroll-down {
+  background-color: $light-color;
+  width: 45px;
+  height: 45px;
+  border-radius: 22.5px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
+
+  img {
+    width: 20px;
+    height: 11.7px;
+  }
 }
