Create partial main

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,3 +1,35 @@
 <main class="main">
-  MAIN
+  <section class="blog">
+    <article class="tip">
+      <span class="tip-text">Insomnia tips</span>
+      <h2 class="title-article">
+        <span>Looking through a </span><span>window</span>
+      </h2>
+      <p>
+        Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
+        luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+      </p>
+      <div class="go-button">
+        <a href="https://adalab.es/" title="Ir a Adalab">Go</a>
+      </div>
+    </article>
+    <article class="reasons">
+      <h2>3 Reasons to purchase</h2>
+      <div class="reason-1">
+        <h3>Ut sed metus</h3>
+        <p>Lorem ipsum dolor sit amet, consecteur.</p>
+      </div>
+      <div>
+        <h3>Curabitur ac erat</h3>
+        <p>Mauris mattis urna quis lorem molestie.</p>
+      </div>
+      <div>
+        <h3>Morbi dictum</h3>
+        <p>Aliquam in dolor et dolor tincidunt.</p>
+      </div>
+      <div>
+        <a href="https://adalab.es/" title="Ir a Adalab">Go</a>
+      </div>
+    </article>
+  </section>
 </main>
