--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,6 +5,7 @@ $font-titles: "Roboto Slab", serif;
 // colors
 $primary-color: #f26002;
 $secondary-color: #8ccbea;
+$dark-grey: #4a4a4a;
 $light-color: #ffffff;
 $light-blue: #eff9ff;
 $blue: #0271bc;
