--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,7 +2,7 @@
   <section class="blog">
     <article class="tip">
       <span class="tip-text">Insomnia tips</span>
-      <h2 class="title-article">
+      <h2 class="title-tip">
         <span>Looking through a </span><span>window</span>
       </h2>
       <p>
