--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -14,21 +14,21 @@
       </div>
     </article>
     <article class="reasons">
-      <h2>3 Reasons to purchase</h2>
+      <h2 class="title-reasons">3 Reasons to purchase</h2>
       <div class="reason-1">
         <h3>Ut sed metus</h3>
         <p>Lorem ipsum dolor sit amet, consecteur.</p>
       </div>
-      <div>
+      <div class="reason-2">
         <h3>Curabitur ac erat</h3>
         <p>Mauris mattis urna quis lorem molestie.</p>
       </div>
-      <div>
+      <div class="reason-3">
         <h3>Morbi dictum</h3>
         <p>Aliquam in dolor et dolor tincidunt.</p>
       </div>
-      <div>
-        <a href="https://adalab.es/" title="Ir a Adalab">Go</a>
+      <div class="reason-button">
+        <a href="https://adalab.es/" title="Ir a Adalab">Reasons</a>
       </div>
     </article>
   </section>
