Add main css styles

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -28,7 +28,7 @@
         <p>Aliquam in dolor et dolor tincidunt.</p>
       </div>
       <div class="reason-button">
-        <a href="https://adalab.es/" title="Ir a Adalab">Reasons</a>
+        <a href="https://adalab.es/" title="Ir a Adalab">More reasons</a>
       </div>
     </article>
   </section>
