--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="wrapper">
+  <div class="header-wrapper">
     <div class="header-menu">
       <a href="https://adalab.es/" title="Ir a Adalab">
         <img
