--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -66,6 +66,7 @@
   grid-template-rows: 30px 93px 93px 93px 45px;
   grid-row-gap: 45px;
   text-align: center;
+  margin: 0;
   padding: 30px 0 60px;
 }
 
