--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <section class="blog">
+  <div class="main-wrapper">
     <article class="tip">
       <span class="tip-text">Insomnia tips</span>
       <h2 class="title-tip">
@@ -31,5 +31,5 @@
         <a href="https://adalab.es/" title="Ir a Adalab">More reasons</a>
       </div>
     </article>
-  </section>
+  </div>
 </main>
