--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,6 +1,7 @@
 .main-wrapper {
   width: 100%;
   margin: auto;
+  min-width: 320px;
   max-width: 1200px;
 }
 
@@ -68,10 +69,11 @@
 .reasons-list {
   background-color: $light-blue;
   display: grid;
-  grid-template-columns: 70px 180px 70px;
+  grid-template-columns: 21.88% 56.25% 21.88%;
   grid-template-rows: 30px 93px 93px 93px 45px;
   grid-row-gap: 45px;
   text-align: center;
+  place-items: center;
   margin: 0;
   padding: 30px 0 60px;
 }
