Add url to the buttons

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="home">
   <div class="header-wrapper">
     <div class="header-menu">
       <a href="https://adalab.es/" title="Ir a Adalab">
@@ -18,10 +18,13 @@
         <p>In hac habitasse platea dictumst.</p>
       </div>
       <div class="scroll-down">
-        <img
-          src="./assets/images/ico-scroll-down.svg"
-          alt="Icono para deslizar"
-        />
+        <a
+          href="#reasons-to-purchase"
+          title="Ir al artículo Reasons to purchase"
+          ><img
+            src="./assets/images/ico-scroll-down.svg"
+            alt="Icono para deslizar al artículo Reasons to purchase"
+        /></a>
       </div>
     </div>
   </div>
