--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -13,7 +13,7 @@
         <a href="https://adalab.es/" title="Ir a Adalab">Go</a>
       </div>
     </article>
-    <article class="reasons-list">
+    <article id="reasons-to-purchase" class="reasons-list">
       <h2 class="title-reasons">3 Reasons to purchase</h2>
       <div class="reason reason-1">
         <h3>Ut sed metus</h3>
