--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -10,21 +10,6 @@
 .tip {
   background-color: $light-color;
   padding: 30px 15px 45px;
-  //   POngo los margins así,
-  //   porque 15 es horizontal,
-  //   igual
-  //     para
-  //     ambos
-  //     lados(izq y derecha).
-  //     POngo
-  //     padding
-  //     porque
-  //     lo
-  //     que
-  //     quiero
-  //     es
-  //     separar
-  //     el contenido del contendedor.
 
   .tip-text {
     font-size: 0.875rem;
@@ -41,8 +26,7 @@
   p {
     color: $dark-grey;
     font-size: 1.125rem;
-    line-height: 1.67;
-    // Este font-size y line heigt se repite en cuatro párrafos, puede ir como un mixin
+    line-height: 1.875rem;
   }
 }
 
@@ -59,7 +43,7 @@
   a {
     color: $primary-color;
     font-size: 1.25rem;
-    line-height: 45px;
+    line-height: 2.8125rem;
     font-weight: 500;
   }
 }
@@ -84,20 +68,20 @@
   font-size: 1.5rem;
   font-family: $font-titles;
   text-transform: capitalize;
-  line-height: 30px;
+  line-height: 1.875rem;
   margin: 0;
 }
 
 .reason {
   h3 {
-    font-size: 1.125rem;
     font-family: $font-titles;
-    line-height: 30px;
+    font-size: 1.125rem;
+    line-height: 1.875rem;
     margin: 0;
   }
   p {
     font-size: 1.125rem;
-    line-height: 30px;
+    line-height: 1.875;
     margin: 0;
   }
 
@@ -116,6 +100,7 @@
     grid-row: 4 / 5;
   }
 }
+
 .reason-button {
   grid-column: 2 / 3;
   grid-row: 5 / 6;
@@ -126,7 +111,7 @@
   border-radius: 22.5px;
   a {
     font-size: 1.25rem;
-    line-height: 45px;
+    line-height: 2.8125rem;
     color: $light-color;
   }
 }
