--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,3 +1,9 @@
+.footer-wrapper {
+  width: 100%;
+  margin: auto;
+  max-width: 1200px;
+}
+
 .footer {
   background-color: $dark-blue;
   color: $light-color;
@@ -6,6 +12,22 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+.arrow {
+  position: absolute;
+  z-index: 3;
+  top: -25px;
+  background-color: $light-color;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 22.5px;
+  box-shadow: 0 2px 4px 0 $shadows;
 }
 
 .menu {
