Change classes names

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,14 +1,14 @@
-<footer>
-  <div class="footer-wrapper">
+<footer class="page__footer">
+  <div class="footer__wrapper">
     <section class="footer">
       <div class="arrow">
         <a href="#home" title="Volver al inicio"
           ><img src="./assets/images/ico-arrow.svg" alt="Icono para deslizar"
         /></a>
       </div>
-      <div class="footer-menu">
-        <nav class="menu menu-1">
-          <ul class="list">
+      <div class="footer__menu">
+        <nav class="menu menu__list-1">
+          <ul class="menu__list">
             <li>
               <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
                 >Articles</a
@@ -36,7 +36,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="menu menu-2">
+        <nav class="menu menu__list-2">
           <ul class="list">
             <li>
               <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
