--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,8 +1,8 @@
-<main class="main">
-  <div class="main-wrapper">
+<main class="page__main">
+  <div class="main__wrapper">
     <article class="tip">
-      <span class="tip-text">Insomnia tips</span>
-      <h2 class="title-tip">
+      <span class="tip__text">Insomnia tips</span>
+      <h2 class="tip__title">
         <span>Looking through a </span><span>window</span>
       </h2>
       <p>
@@ -13,8 +13,8 @@
         <a href="https://adalab.es/" title="Ir a Adalab">Go</a>
       </div>
     </article>
-    <article id="reasons-to-purchase" class="reasons-list">
-      <h2 class="title-reasons">3 Reasons to purchase</h2>
+    <article id="reasons-to-purchase" class="reasons">
+      <h2 class="reasons__title">3 Reasons to purchase</h2>
       <div class="reason reason-1">
         <h3>Ut sed metus</h3>
         <p>Lorem ipsum dolor sit amet, consecteur.</p>
