--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
-<header class="header" id="home">
-  <div class="header-wrapper">
-    <div class="header-menu">
+<header class="page__header" id="home">
+  <div class="header__wrapper">
+    <div class="header__menu">
       <a href="https://adalab.es/" title="Ir a Adalab">
         <img
           class="menu-icon"
@@ -10,7 +10,7 @@
       </a>
     </div>
     <div class="hero">
-      <div class="hero-title">
+      <div class="hero__title">
         <h1>
           <span>Anonymous</span>
           <span>Proxy</span>
