--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -11,3 +11,7 @@ $light-blue: #eff9ff;
 $blue: #0271bc;
 $dark-blue: #304268;
 $shadows: rgba(0, 0, 0, 0.5);
+
+/* BREAKPOINTS */
+$tablet: 768px;
+$desktop: 1280px;
