--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,9 +1,3 @@
-.footer-wrapper {
-  width: 100%;
-  margin: auto;
-  max-width: 1200px;
-}
-
 .footer {
   background-color: $dark-blue;
   color: $light-color;
@@ -14,6 +8,11 @@
   text-align: center;
   position: relative;
   z-index: 1;
+  &__wrapper {
+    width: 100%;
+    margin: auto;
+    max-width: 1200px;
+  }
 }
 
 .arrow {
