--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,9 +1,9 @@
-.header-wrapper {
+.header__wrapper {
   width: 100%;
   margin: auto;
   max-width: 1200px;
 }
-.header-menu {
+.header__menu {
   width: 44px;
   height: 44px;
   background-color: $blue;
@@ -28,20 +28,19 @@
   justify-content: flex-end;
   align-items: center;
   padding-bottom: 53px;
-}
-.hero-title {
-  display: block;
-  text-align: center;
-  color: $light-color;
-  padding-bottom: 45px;
-  h1 {
-    font-size: 2.625rem;
-    font-family: $font-titles;
-    text-transform: uppercase;
-    line-height: 55px;
+  &__title {
+    display: block;
+    text-align: center;
+    color: $light-color;
+    padding-bottom: 45px;
+    h1 {
+      font-size: 2.625rem;
+      font-family: $font-titles;
+      text-transform: uppercase;
+      line-height: 55px;
+    }
   }
 }
-
 .scroll-down {
   background-color: $light-color;
   width: 45px;
