Add header media queries

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -11,11 +11,11 @@
     </div>
     <div class="hero">
       <div class="hero__title">
-        <h1>
+        <h1 class="hero__title__h1">
           <span>Anonymous</span>
           <span>Proxy</span>
         </h1>
-        <p>In hac habitasse platea dictumst.</p>
+        <p class="hero__title__p">In hac habitasse platea dictumst.</p>
       </div>
       <div class="scroll-down">
         <a
