--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -29,15 +29,14 @@
   align-items: center;
   padding-bottom: 53px;
   &__title {
-    display: block;
     text-align: center;
     color: $light-color;
     padding-bottom: 45px;
-    h1 {
+    &__h1 {
       font-size: 2.625rem;
       font-family: $font-titles;
       text-transform: uppercase;
-      line-height: 55px;
+      line-height: 3.4375rem;
     }
   }
 }
@@ -53,5 +52,25 @@
   img {
     width: 20px;
     height: 11.7px;
+  }
+}
+
+@include tablet {
+  .hero {
+    max-height: 768px;
+    padding-bottom: 45px;
+    &__title {
+      padding-bottom: 30px;
+      &__h1 {
+        font-size: 5rem;
+        line-height: 6.625rem;
+        span {
+          display: block;
+        }
+      }
+      &__p {
+        font-size: 1.5rem;
+      }
+    }
   }
 }
