--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,11 +1,11 @@
 <main class="page__main">
   <div class="main__wrapper">
     <article class="tip">
-      <span class="tip__text">Insomnia tips</span>
+      <span class="tip__headline">Insomnia tips</span>
       <h2 class="tip__title">
         <span>Looking through a </span><span>window</span>
       </h2>
-      <p>
+      <p class="tip__text">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
         luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
