--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -11,7 +11,7 @@
   background-color: $light-color;
   padding: 30px 15px 45px;
 
-  &__text {
+  &__headline {
     font-size: 0.875rem;
     color: $secondary-color;
     text-transform: capitalize;
@@ -21,9 +21,10 @@
     font-size: 1.5rem;
     font-family: $font-titles;
     text-transform: capitalize;
+    line-height: 1.875rem;
   }
 
-  p {
+  &__text {
     color: $dark-grey;
     font-size: 1.125rem;
     line-height: 1.875rem;
@@ -45,6 +46,24 @@
     font-size: 1.25rem;
     line-height: 2.8125rem;
     font-weight: 500;
+  }
+}
+
+@include tablet {
+  .tip {
+    padding: 30px 39px 60px;
+    min-height: 330px;
+    &__title {
+      font-size: 1.625rem;
+      line-height: 2.8125rem;
+    }
+    &__text {
+      font-size: 1.25rem;
+    }
+  }
+
+  .go-button {
+    width: 91px;
   }
 }
 
@@ -113,5 +132,61 @@
     font-size: 1.25rem;
     line-height: 2.8125rem;
     color: $light-color;
+  }
+}
+
+@include tablet {
+  .reasons {
+    max-height: 397px;
+    grid-template-columns: 33.3% 1fr 33.3%;
+    grid-template-rows: 45px 98px 45px;
+    grid-row-gap: 45px;
+    padding: 30px 40px 60px 35.7px;
+
+    &__title {
+      font-size: 1.625rem;
+      line-height: 2.8125rem;
+    }
+  }
+
+  .reason {
+    h3 {
+      font-size: 1.5rem;
+    }
+    p {
+      font-size: 1.25rem;
+      margin-top: 14px;
+    }
+
+    &-1 {
+      grid-column: 1 / 2;
+      margin-right: 13.86px;
+    }
+
+    &-2 {
+      grid-row: 2 / 3;
+      margin-left: 13.86px;
+      margin-right: 13.86px;
+    }
+
+    &-3 {
+      grid-column: 3 / 4;
+      grid-row: 2 / 3;
+      margin-left: 13.86px;
+    }
+  }
+
+  .reason-button {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    width: 210px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    // Puesto que serían 15px más 45px del row gap, que daría los 60 que pide la deiseñadora
+    a {
+      font-size: 1.25rem;
+    }
   }
 }
