Change footer version tablet

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -7,7 +7,7 @@
         /></a>
       </div>
       <div class="footer__menu">
-        <nav class="menu menu__list-1">
+        <nav class="list list__1">
           <ul>
             <li>
               <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
@@ -36,7 +36,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="menu menu__list-2">
+        <nav class="list list__2">
           <ul class="list">
             <li>
               <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
