Fix footer tablet version

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -8,7 +8,7 @@
       </div>
       <div class="footer__menu">
         <nav class="list list__1">
-          <ul>
+          <ul class="list">
             <li>
               <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
                 >Articles</a
