--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -61,19 +61,20 @@
   .list {
     margin: 0;
     &__1 {
-      border: 2px solid red;
       width: 210px;
       order: 2;
+      margin-right: 15px;
+      margin-left: 15px;
     }
     &__2 {
-      border: 2px solid green;
       width: 210px;
       order: 3;
+      margin-left: 15px;
     }
   }
   .copy {
     order: 1;
-    border: 2px solid green;
-    width: 150px;
+    margin-right: 15px;
+    width: 210px;
   }
 }
