--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -53,12 +53,17 @@
   .tip {
     padding: 30px 39px 60px;
     min-height: 330px;
+
     &__title {
       font-size: 1.625rem;
       line-height: 2.8125rem;
+      margin: 0;
+      margin-bottom: 30px;
     }
     &__text {
       font-size: 1.25rem;
+      margin: 0;
+      margin-bottom: 30px;
     }
   }
 
