Add transitions to the buttons

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,7 @@
 <header class="page__header" id="home">
   <div class="header__wrapper">
     <div class="header__menu">
-      <a href="https://adalab.es/" title="Ir a Adalab">
+      <a href="https://adalab.es/" title="Ir a Adalab" target="_blank">
         <img
           class="menu-icon"
           src="./assets/images/ico-menu.svg"
