--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -10,7 +10,7 @@
         luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
       <div class="go-button">
-        <a href="https://adalab.es/" title="Ir a Adalab">Go</a>
+        <a href="https://adalab.es/" title="Ir a Adalab" target="_blank">Go</a>
       </div>
     </article>
     <article id="reasons-to-purchase" class="reasons">
@@ -28,7 +28,9 @@
         <p>Aliquam in dolor et dolor tincidunt.</p>
       </div>
       <div class="reason-button">
-        <a href="https://adalab.es/" title="Ir a Adalab">More reasons</a>
+        <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
+          >More reasons</a
+        >
       </div>
     </article>
   </div>
