--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -43,12 +43,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  box-shadow: none;
+  transition: background-color border box-shadow ease 0.8s;
+  &:hover {
+    background-color: $dark-blue;
+    border: 4px solid $secondary-color;
+    box-shadow: 0 2px 4px 0 $shadows;
+  }
   a {
     color: $primary-color;
     font-size: 1.25rem;
     line-height: 2.8125rem;
     font-weight: 500;
+    transition: color ease 0.5s;
+    &:hover {
+      color: $light-blue;
+    }
   }
 }
 
@@ -144,11 +154,19 @@
 .reason-button {
   grid-column: 2 / 3;
   grid-row: 5 / 6;
-  background-color: #f26002;
+  background-color: $primary-color;
   background-position: center;
   width: 184px;
   height: 45px;
   border-radius: 22.5px;
+  box-shadow: none;
+  transition: background-color box-shadow border ease 0.8s;
+  &:hover {
+    background-color: $dark-blue;
+    box-shadow: 0 2px 4px 0 $shadows;
+    border: 4px solid $secondary-color;
+  }
+
   a {
     font-size: 1.25rem;
     line-height: 2.8125rem;
@@ -171,6 +189,7 @@
   }
 
   .reason {
+    height: 100%;
     h3 {
       font-size: 1.5rem;
     }
@@ -233,7 +252,6 @@
 
     &-3 {
       margin-left: 13.1px;
-      transform: translate(0, -19px);
     }
   }
 
