--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -12,6 +12,12 @@
   justify-content: center;
   align-items: center;
   top: 0;
+  transition: width heigth background-color ease 0.8s;
+  &:hover {
+    background-color: $primary-color;
+    width: 50px;
+    height: 50px;
+  }
   .menu-icon {
     width: 100%;
   }
@@ -52,6 +58,18 @@
   img {
     width: 20px;
     height: 11.7px;
+    animation: scroll 1s 1 infinite;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes scroll {
+  from {
+    transform: translate (50px, 40px);
+  }
+
+  to {
+    transform: translate(0, 0);
   }
 }
 
