Fix errors shown by the validator

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -15,7 +15,7 @@
               >
             </li>
             <li>
-              <a href="https://adalab.es/" itle="Ir a Adalab" target="_blank"
+              <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
                 >Books</a
               >
             </li>
@@ -59,7 +59,9 @@
         <div class="copy">
           <span> &copy;2017</span>
           <div>
-            <span>We <span class="heart">❤︎</span> components</span>
+            <h5>
+              <span>We <span class="heart">❤︎</span> components</span>
+            </h5>
           </div>
         </div>
       </div>
