--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -17,7 +17,7 @@
 
 .arrow {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
   top: -25px;
   background-color: $light-color;
   width: 45px;
@@ -27,8 +27,14 @@
   justify-content: center;
   border-radius: 22.5px;
   box-shadow: 0 2px 4px 0 $shadows;
+  border: 4px solid $light-color;
+  transition: border-color ease 0.8s;
+  &:hover {
+    width: 50px;
+    height: 50px;
+    border-color: $secondary-color;
+  }
 }
-
 .list {
   line-height: 1.875rem;
   text-transform: uppercase;
@@ -39,20 +45,11 @@
   font-size: 0.875rem;
   text-transform: lowercase;
   line-height: 1.875rem;
+  width: 100%;
 
   .heart {
     color: $primary-color;
     animation: heartbeat 0.9s infinite;
-  }
-}
-
-@keyframes heartbeat {
-  from {
-    font-size: 0.5rem;
-  }
-
-  to {
-    font-size: 0.875rem;
   }
 }
 
@@ -88,6 +85,18 @@
     order: 1;
     margin-right: 15px;
     width: 210px;
+    .heart {
+      animation: heartbeat 0.9s infinite;
+    }
+  }
+
+  @keyframes heartbeat {
+    from {
+      font-size: 0.5rem;
+    }
+    to {
+      font-size: 0.875rem;
+    }
   }
 }
 
