--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -58,18 +58,18 @@
   img {
     width: 20px;
     height: 11.7px;
-    animation: scroll 1s 1 infinite;
+    animation: scroll 1s infinite;
     transform: translate(0, 0);
   }
 }
 
 @keyframes scroll {
   from {
-    transform: translate (50px, 40px);
+    transform: translate (0, 0);
   }
 
   to {
-    transform: translate(0, 0);
+    transform: translate(0, 50%);
   }
 }
 
