--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -59,7 +59,11 @@
         <div class="copy">
           <span> &copy;2017</span>
           <div>
-            <span>We <span class="heart">❤︎</span> components</span>
+            <span
+              >We
+              <span class="heart"><i class="fas fa-heart"></i></span>
+              components</span
+            >
           </div>
         </div>
       </div>
