--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -38,6 +38,7 @@
     text-align: center;
     color: $light-color;
     padding-bottom: 45px;
+    max-width: 1280px;
     &__h1 {
       font-size: 2.625rem;
       font-family: $font-titles;
