--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,6 +1,8 @@
 <main class="page__main">
-  <div class="main__wrapper">
-    <article class="tip">
+  
+    <article class="article-1">
+      <div class="tip__wrapper">
+        <div class="tip"> 
       <span class="tip__headline">Insomnia tips</span>
       <h2 class="tip__title">
         <span>Looking through a </span><span>window</span>
@@ -12,26 +14,39 @@
       <div class="go-button">
         <a href="https://adalab.es/" title="Ir a Adalab" target="_blank">Go</a>
       </div>
+     </div>
+    </div>
     </article>
-    <article id="reasons-to-purchase" class="reasons">
-      <h2 class="reasons__title">3 Reasons to purchase</h2>
-      <div class="reason reason-1">
-        <h3>Ut sed metus</h3>
-        <p>Lorem ipsum dolor sit amet, consecteur.</p>
+
+
+
+
+
+
+
+    <article id="reasons-to-purchase" class="article-2">
+      <div class="reasons__wrapper">
+      <div class="reasons">
+        <h2 class="reasons__title">3 Reasons to purchase</h2>
+        <div class="reason reason-1">
+          <h3>Ut sed metus</h3>
+          <p>Lorem ipsum dolor sit amet, consecteur.</p>
+        </div>
+        <div class="reason reason-2">
+          <h3>Curabitur ac erat</h3>
+          <p>Mauris mattis urna quis lorem molestie.</p>
+        </div>
+        <div class="reason reason-3">
+          <h3>Morbi dictum</h3>
+          <p>Aliquam in dolor et dolor tincidunt.</p>
+        </div>
+        <div class="reason-button">
+          <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
+            >More reasons</a
+          >
+        </div>
       </div>
-      <div class="reason reason-2">
-        <h3>Curabitur ac erat</h3>
-        <p>Mauris mattis urna quis lorem molestie.</p>
-      </div>
-      <div class="reason reason-3">
-        <h3>Morbi dictum</h3>
-        <p>Aliquam in dolor et dolor tincidunt.</p>
-      </div>
-      <div class="reason-button">
-        <a href="https://adalab.es/" title="Ir a Adalab" target="_blank"
-          >More reasons</a
-        >
-      </div>
+    </div>
     </article>
   </div>
 </main>
