Add h5 to the footer

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -57,7 +57,7 @@
         </nav>
 
         <div class="copy">
-          <span> &copy;2017</span>
+          <h5>&copy;2017</h5>
           <div>
             <span
               >We
