--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -31,12 +31,26 @@
   box-shadow: 0 2px 4px 0 $shadows;
   border: 4px solid $light-color;
   transition: border-color ease 0.8s;
+  animation: arrow 1s 5;
+  transform: translate(0, 0);
+
   &:hover {
     width: 50px;
     height: 50px;
     border-color: $secondary-color;
   }
 }
+
+@keyframes arrow {
+  from {
+    transform: translate (0, 0);
+  }
+
+  to {
+    transform: translate(0, -50%);
+  }
+}
+
 .list {
   line-height: 1.875rem;
   text-transform: uppercase;
