--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -57,8 +57,7 @@
   align-items: center;
 
   img {
-    width: 20px;
-    height: 11.7px;
+    width: 100%;
     animation: scroll 1s infinite;
     transform: translate(0, 0);
   }
