--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -59,11 +59,9 @@
         <div class="copy">
           <h5>&copy;2017</h5>
           <div>
-            <span
-              >We
-              <span class="heart"><i class="fas fa-heart"></i></span>
-              components</span
-            >
+            <span>We</span>
+            <span class="heart"><i class="fas fa-heart"></i></span
+            ><span class="components"> components</span>
           </div>
         </div>
       </div>
